force-app/main/default/objects/Retail_Upload_Commercial_Invoice__c/Retail_Upload_Commercial_Invoice__c.object-meta.xml
<CustomObject>
    <label>Retail Upload Commercial Invoice</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Retail Upload Commercial Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Upload Commercial Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>