force-app/main/default/objects/Retail_Upload_Commercial_Invoice__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No.</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>