force-app/main/default/objects/Retail_Upload_Commercial_Invoice__c/fields/Ready_for_dispatch__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_dispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for dispatch</label>
    <type>Checkbox</type>
</CustomField>