force-app/main/default/objects/Retail_Upload_Commercial_Invoice__c/fields/Select_Order__c.field-meta.xml
<CustomField>
    <fullName>Select_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Select Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Retail_Order__c.Status__c</field>
            <operation>equals</operation>
            <value>Production Approved</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Upload Commercial Invoices</relationshipLabel>
    <relationshipName>Retail_Upload_Commercial_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>