force-app/main/default/objects/Retail_Upload_Commercial_Invoice__c/validationRules/Invoice_upload_date_ls_than_current_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_upload_date_ls_than_current_date</fullName>
    <active>true</active>
    <errorConditionFormula>Invoice_Upload_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Please ensure the invoice upload date is not a future date!</errorMessage>
</ValidationRule>