force-app/main/default/objects/Retail_Upload_Commercial_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_No__c</columns>
    <columns>Invoice_Upload_Date__c</columns>
    <columns>Select_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>